[package]
name = "pressure-cooker"
version = "0.1.0"
authors = ["Adam Vogt <vogt.adam@gmail.com>"]
edition = "2021"
resolver = "2"

[workspace]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
circular-buffer = { path = "circular-buffer" }
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = { version = "0.40.1"}
esp-idf-svc = { version = "0.45.0"}
ds18b20 = "0.1.1"
embedded-graphics = "0.7.1"
ssd1306 = "0.7.1"
anyhow = "1.0.71"
one-wire-bus = "0.1.1"
log = "0.4.17"

[build-dependencies]
embuild = "0.31.1"


